<resources>
    <string name="app_name">18111167-TIFRPCNSA-280420</string>
    <string name="register">Register</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_hp">No hp</string>
    <string name="sudah_punya_login_disini">Sudah punya ? Login disini</string>
    <string name="belum_punya_akun_daftar_disini">Belum punya akun ? Daftar disini</string>
    <string name="login1">login</string>
    <string name="login2">masuk</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="saya_setuju_dengan">Saya setuju dengan</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="by_irvan_maulana">By Irvan Maulana</string>
    <string name="mata_kuliah_mobile_programming">Mata Kuliah Mobile Programming</string>
    <string name="dosen">Dosen</string>
    <string name="aplikasi_evoa">Aplikasi EvoA</string>
    <string name="untuk_memenuhi_tugas">Untuk Memenuhi Tugas</string>
    <string name="nova_agustina_s_t_m_kom">Nova Agustina, S.T., M.Kom.</string>
    <string name="aplikasi_ini_menggunakan_firebase_sebagai_database_akun_dan_autentikasi">Aplikasi ini menggunakan Firebase sebagai Database akun dan autentikasi</string>
    <string name="kembali">Kembali</string>
    <string name="todo1">TODO</string>
    <string name="cegah_virus_corona">Cegah Virus Corona</string>
    <string name="dirumah_aja">Dirumah Aja</string>
    <string name="todo2">TODO</string>
    <string name="jaga_kesehatan_selalu">Jaga Kesehatan Selalu</string>
    <string name="virus_corona">Virus Corona</string>
    <string name="todo3">TODO</string>
    <string name="sekolah_tinggi_teknologi_bandung">Sekolah Tinggi Teknologi Bandung</string>
    <string name="irvan_maulana">Irvan Maulana</string>
    <string name="tif_rp_18_cns_a">TIF-RP-18-CNS A</string>
    <string name="todo">TODO</string>
    <string name="stayathome1">#StayAtHome</string>
    <string name="stayathome2">#StayAtHome</string>
</resources>
