<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Daftar"
    android:background="@drawable/gradien">

    <TextView
        android:id="@+id/tXLogin"
        android:layout_width="162dp"
        android:layout_height="55dp"
        android:layout_marginStart="171dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="533dp"
        android:fontFamily="@font/aladin"
        android:text="@string/daftar"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/Reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tXLogin"
        app:layout_constraintStart_toStartOf="@+id/tXLogin"
        app:layout_constraintTop_toBottomOf="@+id/tXLogin" />

    <EditText
        android:id="@+id/PTxt1"
        android:layout_width="392dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nama_lengkap"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/tXLogin"
        app:layout_constraintStart_toStartOf="@+id/tXLogin"
        app:layout_constraintTop_toBottomOf="@+id/Reg" />

    <EditText
        android:id="@+id/PTxt2"
        android:layout_width="389dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/PTxt1"
        app:layout_constraintStart_toStartOf="@+id/PTxt1"
        app:layout_constraintTop_toBottomOf="@+id/PTxt1" />

    <EditText
        android:id="@+id/PTxt3"
        android:layout_width="391dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/PTxt2"
        app:layout_constraintStart_toStartOf="@+id/PTxt2"
        app:layout_constraintTop_toBottomOf="@+id/PTxt2" />

    <EditText
        android:id="@+id/PTxt4"
        android:layout_width="391dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/no_hp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/PTxt3"
        app:layout_constraintStart_toStartOf="@+id/PTxt3"
        app:layout_constraintTop_toBottomOf="@+id/PTxt3" />

    <Button
        android:id="@+id/BtnLogin2"
        android:layout_width="146dp"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:background="#FFFFFF"
        android:text="@string/daftar"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/PTxt4"
        app:layout_constraintStart_toStartOf="@+id/PTxt4"
        app:layout_constraintTop_toBottomOf="@+id/PTxt4" />

    <TextView
        android:id="@+id/TxtLogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/sudah_punya_login_disini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/BtnLogin2"
        app:layout_constraintStart_toStartOf="@+id/BtnLogin2"
        app:layout_constraintTop_toBottomOf="@+id/BtnLogin2"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkB1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:text="@string/saya_setuju_dengan"
        app:layout_constraintBottom_toTopOf="@+id/BtnLogin2"
        app:layout_constraintEnd_toEndOf="@+id/PTxt4"
        app:layout_constraintStart_toStartOf="@+id/PTxt4"
        app:layout_constraintTop_toBottomOf="@+id/PTxt4" />

    <TextView
        android:id="@+id/SyaratK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/syarat_dan_ketentuan"
        android:textColor="#0389FF"
        app:layout_constraintBottom_toTopOf="@+id/BtnLogin2"
        app:layout_constraintEnd_toEndOf="@+id/PTxt4"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="@+id/PTxt4"
        app:layout_constraintTop_toBottomOf="@+id/PTxt4" />

</androidx.constraintlayout.widget.ConstraintLayout>